--- a/Projects/Mobile/UartBle/UartBle/mainwindow.ui
+++ b/Projects/Mobile/UartBle/UartBle/mainwindow.ui
@@ -33,7 +33,7 @@
       <x>10</x>
       <y>210</y>
       <width>1031</width>
-      <height>131</height>
+      <height>71</height>
      </rect>
     </property>
     <property name="font">
@@ -42,12 +42,12 @@
      </font>
     </property>
    </widget>
-   <widget class="QListWidget" name="listWidget">
+   <widget class="QListWidget" name="listWidgetDevNames">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>350</y>
-      <width>801</width>
+      <y>290</y>
+      <width>601</width>
       <height>921</height>
      </rect>
     </property>
@@ -60,9 +60,9 @@
    <widget class="QListWidget" name="listWidget_2">
     <property name="geometry">
      <rect>
-      <x>820</x>
-      <y>350</y>
-      <width>221</width>
+      <x>620</x>
+      <y>290</y>
+      <width>421</width>
       <height>921</height>
      </rect>
     </property>
@@ -77,7 +77,7 @@
      <rect>
       <x>10</x>
       <y>110</y>
-      <width>1031</width>
+      <width>511</width>
       <height>91</height>
      </rect>
     </property>
@@ -93,6 +93,19 @@
       <width>1031</width>
       <height>271</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButtonConnect">
+    <property name="geometry">
+     <rect>
+      <x>530</x>
+      <y>110</y>
+      <width>511</width>
+      <height>91</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>CONNECT</string>
     </property>
    </widget>
   </widget>
