--- a/Projects/Mobile/UartBle/UartBle/mainwindow.ui
+++ b/Projects/Mobile/UartBle/UartBle/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1057</width>
-    <height>1594</height>
+    <height>1768</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -48,7 +48,7 @@
       <x>10</x>
       <y>290</y>
       <width>601</width>
-      <height>921</height>
+      <height>481</height>
      </rect>
     </property>
     <property name="font">
@@ -63,7 +63,7 @@
       <x>620</x>
       <y>290</y>
       <width>421</width>
-      <height>921</height>
+      <height>481</height>
      </rect>
     </property>
     <property name="font">
@@ -82,17 +82,22 @@
      </rect>
     </property>
     <property name="text">
-     <string>Send data</string>
+     <string>DISCONNECT</string>
     </property>
    </widget>
    <widget class="QTextBrowser" name="textBrowser_log">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>1280</y>
+      <y>780</y>
       <width>1031</width>
-      <height>271</height>
+      <height>941</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButtonConnect">
