--- a/Projects/Mobile/UartBle/UartBle/mainwindow.ui
+++ b/Projects/Mobile/UartBle/UartBle/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1057</width>
-    <height>1768</height>
+    <height>1869</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -24,7 +24,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>Lets scan</string>
+     <string>SCAN BLE DEVICES</string>
     </property>
    </widget>
    <widget class="QTextBrowser" name="textBrowser">
@@ -111,6 +111,29 @@
     </property>
     <property name="text">
      <string>CONNECT</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButtonConnect_2">
+    <property name="geometry">
+     <rect>
+      <x>740</x>
+      <y>1730</y>
+      <width>301</width>
+      <height>91</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>SEND</string>
+    </property>
+   </widget>
+   <widget class="QTextEdit" name="textEdit_send">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>1730</y>
+      <width>711</width>
+      <height>87</height>
+     </rect>
     </property>
    </widget>
   </widget>
